fixed profile bugs, styling for checkboxes, and div spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -117,9 +117,9 @@ video {
 }
 .checkboxItem {
   float:left;
-  display: block;
-  height: 2vh;
-  margin-right: 5px;
+  display: inline-block;
+  height: 3vh;
+  margin-right: 1vw;
   font-size: 2.5vh;
 }
 .logo {
@@ -242,11 +242,11 @@ video {
 .list {
   float:right;
   height: 100vh;
-  width: 40%;
+  width: 35%;
   overflow: scroll;
   background-color: #43D1AF;
   text-decoration: none;
-  border-left: 1px solid #333;
+  
 }
 .list:hover {
   text-decoration: none;
@@ -256,7 +256,7 @@ video {
 }
 .housePic {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
 }
 .price {
   float:right;
@@ -286,7 +286,7 @@ video {
 }
 .profileContainer {
   float: left;
-  width: 28%;
+  width: 30%;
   height: 100vh;
   overflow: scroll;
 }
@@ -305,7 +305,7 @@ video {
 .houseInfo {
   float:right;
   height: 100vh;
-  width: 40%;
+  width: 35%;
   overflow: scroll;
   background-color: #43D1AF;
   font-size: 3vh;
@@ -333,7 +333,6 @@ video {
   background-color: #333;
   color: #43D1AF;
   border: 1px solid #43D1AF;
-  border-left: none;
 }
 .carousel {
   width: 100%;
@@ -418,7 +417,7 @@ video {
 }
 .twitter {
   float: left;
-  width: 32%;
+  width: 35%;
   height: 100vh;
   overflow: scroll;
   border: 1px solid #333;
